--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,10 @@ urllib3==2.2.3
 transliterate==1.10.2
 m3u8==6.0.0
 loguru==0.7.2
+aiohappyeyeballs==2.4.3 
+aiohttp==3.10.8 
+aiosignal==1.3.1 
+attrs==24.2.0 
+frozenlist==1.4.1 
+multidict==6.1.0 
+yarl==1.13.1
